Change narwall image and animations

--- a/styles.css
+++ b/styles.css
@@ -28,10 +28,13 @@ body, a:link, a:visited, a:active{
   position:absolute;
 }
 .narwall {
-  background-image: url(http://sites.psu.edu/siowfa15/wp-content/uploads/sites/29639/2015/10/Narwhal_featured-623x200.jpg);
-  width: 623px;
-  height: 200px;
-
+  background-image: url(https://www.nicepng.com/png/full/78-789282_free-narwhal-clipart-narwhal-clip-art.png);
+  width: 300px;
+  height: 100px;
+  background-size: 300px 100px;
+  transition-property: transform;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in-out;
 }
 .dolphin {
   background-image: url(https://www.acsonline.org/assets/images/tursiops-truncatus-1.png);
@@ -49,5 +52,5 @@ body, a:link, a:visited, a:active{
 }
 
 .upsideDown {
-  transform: rotate(180deg);
+  transform: rotate(90deg);
 }
