--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 body, html{
   height:100%;
+  background-image: url(http://www.dolphinswims.com.au/wp-content/uploads/2014/05/background.jpg);
+  background-size: 100vw 100vh;
 }
 body{
   margin: 0px;
@@ -21,8 +23,9 @@ body, a:link, a:visited, a:active{
   background-color: #777;
 }
 .redDot{
-  border:10px solid red;
+  border:10px solid rgb(55, 123, 226);
   border-radius:10px;
+  opacity: 0.4;
 }
 .dancer{
   position:absolute;
