--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,12 @@ body, a:link, a:visited, a:active{
   width: 300px;
   height: 100px;
 }
+.shark {
+  background-image: url(https://cdn.pixabay.com/photo/2019/02/04/03/30/shark-3973899_960_720.png);
+  background-size: 600px 200px;
+  width: 600px;
+  height: 200px;
+}
 .big {
   background-size: 600px 200px;
   width: 600px;
